[package]
name = "snake"
version = "0.1.0"
authors = ["HeartANDu <heartandu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bevy = { version = "0.12.1" , features = ["dynamic_linking"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
